--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Scrapes SkillRack profile data.",
   "main": "index.js",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12", 
-    "cors": "^2.8.5",        
-    "express": "^4.18.2"      
+    "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.7"
+  }
 }
